--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -24,245 +24,267 @@
         android:key="bliss_header"
         android:layout="@layout/qs_header" />
 
-     <PreferenceScreen
+    <!-- Qs header -->
+    <PreferenceCategory
+        android:key="qs_header_category"
+        android:title="@string/qs_header_category">
+
+    <!-- Status Bar Custom Header -->
+    <PreferenceScreen
         android:id="@+id/qs_header"
+        android:icon="@drawable/ic_statusbar_icons"
         android:title="@string/qs_header_title"
         android:summary="@string/qs_header_summary"
         android:fragment="com.blissroms.blissify.fragments.qs.QSHeaders"/>
 
     <lineageos.preference.LineageSystemSettingListPreference
         android:key="qs_quick_pulldown"
+        android:icon="@drawable/ic_blissify_qs"
         android:title="@string/status_bar_quick_qs_pulldown_title"
         android:entries="@array/status_bar_quick_qs_pulldown_entries"
         android:entryValues="@array/status_bar_quick_qs_pulldown_values"
         android:defaultValue="0" />
 
+    <!-- QS clock -->
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="show_qs_clock"
+        android:icon="@drawable/ic_clock"
+        android:title="@string/qs_clock_title"
+        android:summary="@string/qs_clock_summary"
+        android:defaultValue="true" />
+
+    </PreferenceCategory>
+
+    <!-- QS brightness -->
+    <PreferenceCategory
+        android:title="@string/status_bar_brightness_category"
+        android:icon="@drawable/ic_blissify_misc">
+
+    <lineageos.preference.LineageSecureSettingListPreference
+        android:key="qs_show_brightness_slider"
+        android:title="@string/qs_brightness_slider_title"
+        android:entries="@array/qs_brightness_slider_entries"
+        android:entryValues="@array/qs_brightness_slider_values"
+        android:defaultValue="1" />
+
+    <lineageos.preference.LineageSecureSettingSwitchPreference
+        android:key="qs_show_auto_brightness"
+        android:title="@string/brightness_icon_title"
+        android:summary="@string/brightness_icon_summary"
+        lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SecureSettingSwitchPreference
+        android:key="qs_show_brightness_buttons"
+        android:title="@string/qs_show_brightness_buttons_title"
+        android:summary="@string/qs_show_brightness_buttons_summary"
+        android:defaultValue="true" />
+
+    </PreferenceCategory>
+
+    <!-- QS Rows/COls -->
     <PreferenceCategory
         android:key="qs_columns_rows_category"
         android:icon="@drawable/ic_statusbar_icons"
         android:title="@string/qs_columns_rows_category_title" >
 
-        <com.bliss.support.preferences.SystemSettingSeekBarPreference
-            android:key="qs_rows_portrait"
-            android:title="@string/qs_rows_portrait_title"
-            android:max="5"
-            android:min="1"
-            android:defaultValue="3"
-            settings:units="" />
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="qs_rows_portrait"
+        android:title="@string/qs_rows_portrait_title"
+        android:max="5"
+        android:min="1"
+        android:defaultValue="3"
+        settings:units="" />
 
-        <com.bliss.support.preferences.SystemSettingSeekBarPreference
-            android:key="qs_rows_landscape"
-            android:title="@string/qs_rows_landscape_title"
-            android:max="5"
-            android:min="1"
-            android:defaultValue="1"
-            settings:units="" />
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="qs_rows_landscape"
+        android:title="@string/qs_rows_landscape_title"
+        android:max="5"
+        android:min="1"
+        android:defaultValue="1"
+        settings:units="" />
 
-        <com.bliss.support.preferences.SystemSettingSeekBarPreference
-            android:key="qs_columns_portrait"
-            android:title="@string/qs_columns_portrait_title"
-            android:max="7"
-            android:min="1"
-            android:defaultValue="4"
-            settings:units="" />
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="qs_columns_portrait"
+        android:title="@string/qs_columns_portrait_title"
+        android:max="7"
+        android:min="1"
+        android:defaultValue="4"
+        settings:units="" />
 
-        <com.bliss.support.preferences.SystemSettingSeekBarPreference
-            android:key="qs_columns_landscape"
-            android:title="@string/qs_columns_landscape_title"
-            android:max="9"
-            android:min="1"
-            android:defaultValue="4"
-            settings:units="" />
+    <com.bliss.support.preferences.SystemSettingSeekBarPreference
+        android:key="qs_columns_landscape"
+        android:title="@string/qs_columns_landscape_title"
+        android:max="9"
+        android:min="1"
+        android:defaultValue="4"
+        settings:units="" />
 
     </PreferenceCategory>
 
+    <!-- QS Themes -->
     <PreferenceCategory
         android:key="qs_category"
+        android:icon="@drawable/ic_blissify_qs"
         android:title="@string/qs_themes_category_title" >
 
     <com.bliss.support.preferences.SystemSettingSeekBarPreference
-            android:key="qs_panel_bg_alpha"
-            android:title="@string/qs_panel_alpha_title"
-            android:summary="@string/qs_panel_alpha_summary"
-            android:max="255"
-            settings:min="0"
-            android:defaultValue="255"
-            settings:units="%" />
+        android:key="qs_panel_bg_alpha"
+        android:title="@string/qs_panel_alpha_title"
+        android:summary="@string/qs_panel_alpha_summary"
+        android:max="255"
+        settings:min="0"
+        android:defaultValue="255"
+        settings:units="%" />
 
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_panel_bg_use_fw"
-            android:title="@string/qs_bg_use_fw"
-            android:summary="@string/qs_bg_use_fw_summary"
-            android:defaultValue="true"
-            android:disableDependentsState="true" />
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_panel_bg_use_fw"
+        android:title="@string/qs_bg_use_fw"
+        android:summary="@string/qs_bg_use_fw_summary"
+        android:defaultValue="true"
+        android:disableDependentsState="true" />
 
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_panel_bg_use_wall"
-            android:title="@string/qs_bg_wall_title"
-            android:summary="@string/qs_bg_wall_summary"
-            android:defaultValue="false"
-            android:dependency="qs_panel_bg_use_fw" />
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_panel_bg_use_wall"
+        android:title="@string/qs_bg_wall_title"
+        android:summary="@string/qs_bg_wall_summary"
+        android:defaultValue="false"
+        android:dependency="qs_panel_bg_use_fw" />
 
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_panel_bg_use_accent"
-            android:title="@string/qs_bg_accent_title"
-            android:summary="@string/qs_bg_accent_summary"
-            android:defaultValue="false"
-            android:dependency="qs_panel_bg_use_fw" />
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_panel_bg_use_accent"
+        android:title="@string/qs_bg_accent_title"
+        android:summary="@string/qs_bg_accent_summary"
+        android:defaultValue="false"
+        android:dependency="qs_panel_bg_use_fw" />
 
-        <com.bliss.support.colorpicker.ColorPickerPreference
-            android:key="qs_panel_color"
-            android:title="@string/qs_panel_color_title"
-            android:defaultValue="0xffffff"
-            android:persistent="false"
-            android:dependency="qs_panel_bg_use_fw" />
+    <com.bliss.support.colorpicker.ColorPickerPreference
+        android:key="qs_panel_color"
+        android:title="@string/qs_panel_color_title"
+        android:defaultValue="0xffffff"
+        android:persistent="false"
+        android:dependency="qs_panel_bg_use_fw" />
 
     </PreferenceCategory>
 
+    <!-- QS Themes -->
     <PreferenceCategory
         android:title="@string/tile_options"
         android:icon="@drawable/ic_blissify_qs">
 
-        <com.bliss.support.preferences.SecureSettingSwitchPreference
-            android:key="quick_settings_vibrate"
-            android:title="@string/quick_settings_vibrate_title"
-            android:summary="@string/quick_settings_vibrate_summary"
-            android:defaultValue="false"/>
+    <com.bliss.support.preferences.SecureSettingSwitchPreference
+        android:key="quick_settings_vibrate"
+        android:title="@string/quick_settings_vibrate_title"
+        android:summary="@string/quick_settings_vibrate_summary"
+        android:defaultValue="false"/>
 
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_tile_title_visibility"
-            android:title="@string/qs_tile_title_visibility_title"
-            android:summary="@string/qs_tile_title_visibility_summary"
-            android:defaultValue="true" />
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_tile_title_visibility"
+        android:title="@string/qs_tile_title_visibility_title"
+        android:summary="@string/qs_tile_title_visibility_summary"
+        android:defaultValue="true" />
 
     </PreferenceCategory>
 
+    <!-- QS Footer -->
     <PreferenceCategory
         android:key="qs_footer"
+        android:icon="@drawable/ic_toast_icon"
         android:title="@string/qs_footer_title" >
 
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="dismiss_all_button"
-            android:title="@string/enable_clear_all_button"
-            android:summary="@string/enable_clear_all_button_summary"
-            android:defaultValue="true" />
-
-        <!-- QS footer text toggle -->
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="footer_text_show"
-            android:title="@string/footer_text_show_title"
-            android:summary="@string/footer_text_show_summary"
-            android:defaultValue="false" />
-
-        <!-- QS footer text string -->
-        <com.bliss.support.preferences.SystemSettingEditTextPreference
-            android:key="footer_text_string"
-            android:title="@string/footer_text_string_title"
-            android:summary="@string/footer_text_string_summary"
-            android:dependency="footer_text_show"
-            android:defaultValue="#BlissRoms" />
-
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_footer_show_settings"
-            android:title="@string/qs_footer_settings_title"
-            android:summary="@string/qs_footer_settings_summary"
-            android:defaultValue="true" />
-
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_footer_show_services"
-            android:title="@string/qs_footer_services_title"
-            android:summary="@string/qs_footer_services_summary"
-            android:defaultValue="false" />
-
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_footer_show_user"
-            android:title="@string/qs_footer_user_title"
-            android:summary="@string/qs_footer_user_summary"
-            android:defaultValue="true" />
-
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_footer_show_edit"
-            android:title="@string/qs_footer_edit_title"
-            android:summary="@string/qs_footer_edit_summary"
-            android:defaultValue="true" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:title="@string/battery_options"
-        android:icon="@drawable/ic_battery_bar">
-
-        <!-- Battery styles -->
-        <com.bliss.support.preferences.SystemSettingListPreference
-            android:key="qs_battery_style"
-            android:title="@string/status_bar_battery_style_title"
-            android:dialogTitle="@string/status_bar_battery_style_title"
-            android:entries="@array/qs_battery_style_entries"
-            android:entryValues="@array/qs_battery_style_values"
-            android:defaultValue="-1" />
-
-        <!-- Battery location -->
-        <com.bliss.support.preferences.SystemSettingListPreference
-            android:key="qs_battery_location"
-            android:title="@string/qs_battery_location_title"
-            android:dialogTitle="@string/qs_battery_location_title"
-            android:entries="@array/qs_battery_location_entries"
-            android:entryValues="@array/qs_battery_location_values"
-            android:defaultValue="0" />
-
-        <!-- Battery percent -->
-        <com.bliss.support.preferences.SystemSettingListPreference
-            android:key="qs_show_battery_percent"
-            android:title="@string/battery_percentage_title"
-            android:entries="@array/battery_percentage_entries"
-            android:entryValues="@array/battery_percentage_values"
-            android:defaultValue="2" />
-
-        <!-- Battery estimate -->
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="qs_show_battery_estimate"
-            android:icon="@drawable/ic_timelapse"
-            android:title="@string/battery_estimate_title"
-            android:summary="@string/battery_estimate_summary" />
-
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="bluetooth_qs_show_battery"
-            android:title="@string/bluetooth_battery_title"
-            android:summary="@string/bluetooth_battery_summary"
-            android:defaultValue="true"/>
-
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:title="@string/status_bar_brightness_category"
-        android:icon="@drawable/ic_blissify_misc">
-
-        <lineageos.preference.LineageSecureSettingListPreference
-            android:key="qs_show_brightness_slider"
-            android:title="@string/qs_brightness_slider_title"
-            android:entries="@array/qs_brightness_slider_entries"
-            android:entryValues="@array/qs_brightness_slider_values"
-            android:defaultValue="1" />
-
-        <lineageos.preference.LineageSecureSettingSwitchPreference
-            android:key="qs_show_auto_brightness"
-            android:title="@string/brightness_icon_title"
-            android:summary="@string/brightness_icon_summary"
-            lineage:requiresConfig="@*android:bool/config_automatic_brightness_available"
-            android:defaultValue="true" />
-
-        <com.bliss.support.preferences.SecureSettingSwitchPreference
-            android:key="qs_show_brightness_buttons"
-            android:title="@string/qs_show_brightness_buttons_title"
-            android:summary="@string/qs_show_brightness_buttons_summary"
-            android:defaultValue="true" />
-
-    </PreferenceCategory>
-
-    <!-- QS clock -->
     <com.bliss.support.preferences.SystemSettingSwitchPreference
-        android:key="show_qs_clock"
-        android:title="@string/qs_clock_title"
-        android:summary="@string/qs_clock_summary"
+        android:key="dismiss_all_button"
+        android:title="@string/enable_clear_all_button"
+        android:summary="@string/enable_clear_all_button_summary"
         android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="footer_text_show"
+        android:title="@string/footer_text_show_title"
+        android:summary="@string/footer_text_show_summary"
+        android:defaultValue="false" />
+
+    <com.bliss.support.preferences.SystemSettingEditTextPreference
+        android:key="footer_text_string"
+        android:title="@string/footer_text_string_title"
+        android:summary="@string/footer_text_string_summary"
+        android:dependency="footer_text_show"
+        android:defaultValue="#BlissRoms" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_footer_show_settings"
+        android:title="@string/qs_footer_settings_title"
+        android:summary="@string/qs_footer_settings_summary"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_footer_show_services"
+        android:title="@string/qs_footer_services_title"
+        android:summary="@string/qs_footer_services_summary"
+        android:defaultValue="false" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_footer_show_user"
+        android:title="@string/qs_footer_user_title"
+        android:summary="@string/qs_footer_user_summary"
+        android:defaultValue="true" />
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_footer_show_edit"
+        android:title="@string/qs_footer_edit_title"
+        android:summary="@string/qs_footer_edit_summary"
+        android:defaultValue="true" />
+    </PreferenceCategory>
+
+    <!-- QS Battery -->
+    <PreferenceCategory
+        android:key="qs_battery_category"
+        android:title="@string/battery_options">
+
+    <!-- Battery styles -->
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="qs_battery_style"
+        android:icon="@drawable/ic_battery_bar"
+        android:title="@string/status_bar_battery_style_title"
+        android:dialogTitle="@string/status_bar_battery_style_title"
+        android:entries="@array/qs_battery_style_entries"
+        android:entryValues="@array/qs_battery_style_values"
+        android:defaultValue="-1" />
+
+    <!-- Battery location -->
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="qs_battery_location"
+        android:icon="@drawable/ic_battery_bar"
+        android:title="@string/qs_battery_location_title"
+        android:dialogTitle="@string/qs_battery_location_title"
+        android:entries="@array/qs_battery_location_entries"
+        android:entryValues="@array/qs_battery_location_values"
+        android:defaultValue="0" />
+
+    <!-- Battery percent -->
+    <com.bliss.support.preferences.SystemSettingListPreference
+        android:key="qs_show_battery_percent"
+        android:icon="@drawable/ic_battery_bar"
+        android:title="@string/battery_percentage_title"
+        android:entries="@array/battery_percentage_entries"
+        android:entryValues="@array/battery_percentage_values"
+        android:defaultValue="2" />
+
+    <!-- Battery estimate -->
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="qs_show_battery_estimate"
+        android:icon="@drawable/ic_timelapse"
+        android:title="@string/battery_estimate_title"
+        android:summary="@string/battery_estimate_summary" />
+
+    <!-- Qs bluetooth battery-->
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="bluetooth_qs_show_battery"
+        android:icon="@drawable/ic_battery_bar"
+        android:title="@string/bluetooth_battery_title"
+        android:summary="@string/bluetooth_battery_summary"
+        android:defaultValue="true"/>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
