--- a/res/xml/blissify_buttons.xml
+++ b/res/xml/blissify_buttons.xml
@@ -124,24 +124,22 @@
 
     <PreferenceCategory
         android:key="home_key"
-        android:title="@string/hardware_keys_home_key_title" >
+        android:title="@string/hardware_keys_home_key_title" 
+        android:icon="@drawable/ic_hardware_keys">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="home_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="true" />
 
         <SwitchPreference
             android:key="home_answer_call"
-            android:icon="@drawable/ic_call_options"
             android:title="@string/home_answer_call_title"
             android:summary="@string/home_answer_call_summary"
             android:persistent="false"/>
 
         <ListPreference
             android:key="hardware_keys_home_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -150,7 +148,6 @@
 
         <ListPreference
             android:key="hardware_keys_home_double_tap"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_double_tap_title"
             android:title="@string/hardware_keys_double_tap_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -161,17 +158,16 @@
 
     <PreferenceCategory
         android:key="back_key"
-        android:title="@string/hardware_keys_back_key_title" >
+        android:title="@string/hardware_keys_back_key_title"
+        android:icon="@drawable/ic_hardware_keys">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="back_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_back_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -181,17 +177,16 @@
 
     <PreferenceCategory
         android:key="menu_key"
-        android:title="@string/hardware_keys_menu_key_title" >
+        android:title="@string/hardware_keys_menu_key_title"
+        android:icon="@drawable/ic_prevent_accidental_wakeup">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="menu_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_menu_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -200,7 +195,6 @@
 
         <ListPreference
             android:key="hardware_keys_menu_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -211,17 +205,16 @@
 
     <PreferenceCategory
         android:key="assist_key"
-        android:title="@string/hardware_keys_assist_key_title" >
+        android:title="@string/hardware_keys_assist_key_title"
+        android:icon="@drawable/ic_hardware_keys">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="assist_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_assist_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -230,7 +223,6 @@
 
         <ListPreference
             android:key="hardware_keys_assist_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -245,13 +237,11 @@
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="app_switch_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <ListPreference
             android:key="hardware_keys_app_switch_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_short_press_title"
             android:title="@string/hardware_keys_short_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -260,7 +250,6 @@
 
         <ListPreference
             android:key="hardware_keys_app_switch_long_press"
-            android:icon="@drawable/ic_doubletap"
             android:dialogTitle="@string/hardware_keys_long_press_title"
             android:title="@string/hardware_keys_long_press_title"
             android:entries="@array/hardware_keys_action_entries"
@@ -271,11 +260,11 @@
 
     <PreferenceCategory
         android:key="camera_key"
-        android:title="@string/hardware_keys_camera_key_title">
+        android:title="@string/hardware_keys_camera_key_title"
+        android:icon="@drawable/ic_hardware_keys">
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="camera_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
@@ -295,63 +284,64 @@
 
     <PreferenceCategory
         android:key="volume_keys"
-        android:title="@string/hardware_keys_volume_keys_title" >
+        android:title="@string/hardware_keys_volume_keys_title"
+        android:icon="@drawable/ic_volume">
 
         <!-- Audio Panel view  -->
         <PreferenceScreen
             android:key="volume_panel"
-            android:icon="@drawable/ic_volume"
             android:title="@string/audio_panel_view_title"
             android:summary="@string/audio_panel_view_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.VolumePanel" />
 
+        <SwitchPreference
+            android:key="volume_panel_on_left"
+            android:title="@string/volume_panel_on_left_title"
+            android:summary="@string/volume_panel_on_left_summary" />
+
         <Preference
             android:key="vol_steps"
-            android:icon="@drawable/ic_volume"
             android:title="@string/volume_steps_title"
             android:summary="@string/volume_steps_summary"
             android:fragment="com.blissroms.blissify.fragments.buttons.VolumeSteps" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="volume_buttons"
+        android:title="@string/volume_options_title"
+        android:icon="@drawable/ic_volume_button">
+
+        <SwitchPreference
+            android:key="swap_volume_buttons"
+            android:title="@string/swap_volume_buttons_title"
+            android:summary="@string/swap_volume_buttons_summary" />
+
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_wake_screen"
-            android:icon="@drawable/ic_prevent_accidental_wakeup"
             android:title="@string/button_wake_title"
             android:defaultValue="false" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volume_answer_call"
-            android:icon="@drawable/ic_call_options"
             android:title="@string/volume_answer_call_title"
             android:summary="@string/volume_answer_call_summary"
             android:defaultValue="false" />
 
         <lineageos.preference.LineageSystemSettingSwitchPreference
             android:key="volbtn_music_controls"
-            android:icon="@drawable/ic_music_visualizer"
             android:title="@string/volbtn_music_controls_title"
             android:summary="@string/volbtn_music_controls_summary"
             android:defaultValue="true" />
 
         <ListPreference
             android:key="volume_key_cursor_control"
-            android:icon="@drawable/ic_volume"
             android:dialogTitle="@string/volbtn_cursor_control_title"
             android:title="@string/volbtn_cursor_control_title"
             android:entries="@array/volbtn_cursor_control_entries"
             android:entryValues="@array/volbtn_cursor_control_values"
             android:persistent="false" />
 
-        <SwitchPreference
-            android:key="swap_volume_buttons"
-            android:icon="@drawable/ic_volume"
-            android:title="@string/swap_volume_buttons_title"
-            android:summary="@string/swap_volume_buttons_summary" />
-
-        <SwitchPreference
-            android:key="volume_panel_on_left"
-            android:icon="@drawable/ic_volume"
-            android:title="@string/volume_panel_on_left_title"
-            android:summary="@string/volume_panel_on_left_summary" />
     </PreferenceCategory>
 
     <PreferenceCategory
