--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -1913,4 +1913,19 @@
         <item>1</item>
     </string-array>
 
+    <!-- Clock Flow -->
+    <string-array name="clock_flow_entries">
+        <item>@string/disabled</item>
+        <item>@string/floral</item>
+        <item>@string/wavy</item>
+        <item>@string/circle</item>
+    </string-array>
+
+    <string-array name="clock_flow_values">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+
 </resources>
