--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1784,4 +1784,10 @@
     <string name="qs_data_usage_location_title">Qs Data Usage Location</string>
     <string name="qs_data_usage_location_qs_panel">QS Panel</string>
     <string name="qs_data_usage_location_qs_statusbar">Quick Statusbar</string>
+
+    <!-- Lockscreen Clock Animation -->
+    <string name="keyguard_clock_animation_title">Keyguard Clock Animation</string>
+    <string name="floral">floral</string>
+    <string name="wavy">wavy</string>
+    <string name="circle">circle</string>
 </resources>
