--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1780,4 +1780,10 @@
     <string name="lock_clock_color_random">Random Accent</string>
     <string name="aosp_weather">Aosp Weather</string>
     <string name="omni_weather">Omni Weather</string>
+
+    <!-- Lockscreen Clock Animation -->
+    <string name="keyguard_clock_animation_title">Keyguard Clock Animation</string>
+    <string name="floral">floral</string>
+    <string name="wavy">wavy</string>
+    <string name="circle">circle</string>
 </resources>
