--- a/res/xml/blissify_settings_pulse.xml
+++ b/res/xml/blissify_settings_pulse.xml
@@ -39,6 +39,11 @@
         android:title="@string/show_lockscreen_pulse_title"
         android:summary="@string/show_lockscreen_pulse_summary"/>
 
+    <SwitchPreference
+        android:key="ambient_pulse_enabled"
+        android:title="@string/show_ambient_pulse_title"
+        android:summary="@string/show_ambient_pulse_summary"/>
+
     <com.bliss.support.preferences.SecureSettingListPreference
         android:key="pulse_render_style"
         android:title="@string/pulse_render_mode_title"
